# TaskAI

./: .gitignore  AGENTS.md  CLAUDE.md  PRD.md  README.md  index.html  package-lock.json  package.json  plan.md  plan2.md  tailwind.config.js  temp2.txt  vite.config.ts
.edge-validation-profile/: Functional SAN Data-wal  Local State
.edge-validation-profile/Default/: Bookmarks  BrowsingTopicsState  DIPS-wal  Favicons  History  Login Data  Network Action Predictor  Preferences  Secure Preferences  Web Data
.edge-validation-profile/Default/DawnGraphiteCache/: index
.edge-validation-profile/Default/DawnWebGPUCache/: index
.edge-validation-profile/Default/EdgePushStorageWithConnectTokenAndKey/: LOG
.edge-validation-profile/GrShaderCache/: index
.edge-validation-profile/GraphiteDawnCache/: index
.edge-validation-profile/ShaderCache/: index
.edge-validation-profile/extensions_crx_cache/: metadata.json
design-reference/: styles.css
docs/: SECOND_GEN_UI_DESIGN.md
migrations/: 20260505123000_initial.sql  20260516180000_add_reminders.sql  20260516193000_add_materials.sql  20260518193000_add_ai_history.sql  20260520100000_add_task_trash.sql  20260523100000_add_study_projects.sql
scripts/: dev.mjs  port-utils.mjs  tauri.mjs
src/: App.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/tests/: migrations.rs
src/lib/: aiHistory.ts  aiPlanning.ts  aiTaskResolver.ts  aiTools.ts  api.ts  domain.ts  intentRouter.ts  store.ts  studyProjectDashboard.ts  studyProjectReschedule.ts  types.ts
(+383 files in other folders)
